--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   shared_preferences: ^2.3.2
+  modal_bottom_sheet: ^3.0.0
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
